fixed sizing on smaller screen

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ iframe {
 }
 
 .img-section {
-  min-height: 700px;
+  min-height: 600px;
 }
 
 .matchbook {
@@ -65,9 +65,9 @@ p {
 }
 
 .parallax-container {
-  min-height: 380px;
+  min-height: 600px;
   line-height: 0;
-  height: auto;
+/*  height: auto;*/
   color: rgba(255,255,255,.9);
 }
   .parallax-container .section {
